--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     <a href="https://mitrokhin-max.github.io/safecontract" target="_blank" class="portfolio__screen"><img src="img/3.jpg" alt=""></a>
                                 </div>
                                 <div class="portfolio__slide swiper-slide">
-                                    <a href="https://mitrokhin-max.github.io/rhea" target="_blank" class="portfolio__screen"><img src="img/3.jpg" alt=""></a>
+                                    <a href="https://mitrokhin-max.github.io/rhea" target="_blank" class="portfolio__screen"><img src="img/4.jpg" alt=""></a>
                                 </div>
                             </div>
                             <div class="portfolio__btn-prev"><img src="img/left.svg" alt=""></div>
@@ -195,32 +195,32 @@
                                             <div class="price__column">
                                                 <div class="price__card card">
                                                     <div class="card__row">
-                                                        <h3 class="card__title">Визитка</h3>
+                                                        <h3 class="card__title">Сайт-визитка</h3>
                                                         <ul class="card__list">
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">1 страница</li>
+                                                            <li class="card__advantage">1-2 блока</li>
+                                                            <li class="card__advantage">Максимально сжатая информация о вас</li>
+                                                            <li class="card__advantage">Аналог картонной визитки</li>
+                                                            <li class="card__advantage">Продолжительность работы: ~2 дня</li>
+                                                            <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
                                                         </ul>
-                                                        <p class="card__price"><s>15.000</s><span> 7.000 руб.</span></p>
+                                                        <p class="card__price"><s>7.000</s><span>5.000 руб.</span></p>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="price__column">
                                                 <div class="price__card card">
                                                     <div class="card__row">
-                                                        <h3 class="card__title">Лендинг</h3>
+                                                        <h3 class="card__title">Лендинг-пейдж</h3>
                                                         <ul class="card__list">
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">1 страница</li>
+                                                            <li class="card__advantage">3 и более блока</li>
+                                                            <li class="card__advantage">Максимально информативный сайт</li>
+                                                            <li class="card__advantage">Продолжительность работы: ~3-7 дней</li>
+                                                            <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
+                                                            <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
                                                         </ul>
-                                                        <p class="card__price"><s>15.000</s><span> 10.000 руб.</span></p>
+                                                        <p class="card__price"><s>15.000</s><span>10.000 руб.</span></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -229,10 +229,10 @@
                                                     <div class="card__row">
                                                         <h3 class="card__title">Верстка макета</h3>
                                                         <ul class="card__list">
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
-                                                            <li class="card__advantage">Lorem, ipsum dolor.</li>
+                                                            <li class="card__advantage">Если у вас есть макет сайта, который отрисовал дизайнер, мы можем его сверстать</li>
+                                                            <li class="card__advantage">Условия цены и продолжительности работы обсуждаются</li>
+                                                            <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
+                                                            <!-- <li class="card__advantage">Lorem, ipsum dolor.</li> -->
                                                         </ul>
                                                         <p class="card__price card__price_b">По договоренности</p>
                                                     </div>
