--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <section class="advantages">
                     <div class="advantages__container container">
                         <div class="advantages__row">
-                            <h2 class="advantages__title title" data-swiper-parallax="-100">Наши преимущества</h2>
+                            <h2 class="advantages__title title" data-swiper-parallax="-100"><span>Наши преимущества</span></h2>
                             <div class="advantages__tabs">
                                 <nav class="advantages__items" data-swiper-parallax="-500">
                                     <div class="advantages__icon advantages__icon_monitor active"></div>
@@ -65,7 +65,7 @@
                 <section class="portfolio">
                     <div class="portfolio__container container">
                         <div class="portfolio__row">
-                            <h2 class="portfolio__title title" data-swiper-parallax="-100">Примеры работ</h2>
+                            <h2 class="portfolio__title title" data-swiper-parallax="-100"><span>Примеры работ</span></h2>
                             <div class="portfolio__slider swiper-container" data-swiper-parallax="-200">
                                 <div class="portfolio__wrap swiper-wrapper">
                                     <div class="portfolio__slide swiper-slide">
@@ -93,7 +93,7 @@
                 <section class="reviews">
                     <div class="reviews__container container">
                         <div class="reviews__row">
-                            <h2 class="reviews__title title" data-swiper-parallax="-100">Отзывы реальных заказчиков</h2>
+                            <h2 class="reviews__title title" data-swiper-parallax="-100"><span>Отзывы реальных заказчиков</span></h2>
                             <div class="reviews__content" data-swiper-parallax="-200">
                                 <div class="reviews__column reviews__column_w">
                                     <div class="reviews__words words swiper-container">
@@ -140,7 +140,7 @@
                 <section class="plan">
                     <div class="plan__container container">
                         <div class="plan__row">
-                            <h2 class="plan__title title" data-swiper-parallax="-100">Схема работы</h2>
+                            <h2 class="plan__title title" data-swiper-parallax="-100"><span>Схема работы</span></h2>
                             <div class="plan__content">
                                 <div class="plan__point" data-swiper-parallax="-200">
                                     <p class="plan__number">1</p>
@@ -191,7 +191,9 @@
                                 <div class="price__slider swiper-container">
                                     <div class="price__wrap swiper-wrapper">
                                         <div class="price__slide swiper-slide">
-                                            <h2 class="price__title title">Цены</h2>
+                                            <div class="price__head">
+                                                <h2 class="price__title title"><span>Цены</span></h2>
+                                            </div>
                                             <div class="price__content">
                                                 <div class="price__column">
                                                     <div class="price__card card">
@@ -266,7 +268,7 @@
                 <section class="contacts">
                     <div class="contacts__container container">
                         <div class="contacts__row">
-                            <h2 class="contacts__title title" data-swiper-parallax="-500">Контакты</h2>
+                            <h2 class="contacts__title title" data-swiper-parallax="-500"><span>Контакты</span></h2>
                             <div class="contacts__content" data-swiper-parallax="-1000">
                                 <div class="contacts__column">
                                     <div class="contacts__body">
