--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <section class="advantages">
                     <div class="advantages__container container">
                         <div class="advantages__row">
-                            <h2 class="advantages__title title" data-swiper-parallax="-100"><span>Наши преимущества</span></h2>
+                            <h2 class="advantages__title title" data-swiper-parallax="-100"><span>Преимущества</span></h2>
                             <div class="advantages__tabs">
                                 <nav class="advantages__items" data-swiper-parallax="-500">
                                     <div class="advantages__icon advantages__icon_monitor active"></div>
@@ -93,7 +93,7 @@
                 <section class="reviews">
                     <div class="reviews__container container">
                         <div class="reviews__row">
-                            <h2 class="reviews__title title" data-swiper-parallax="-100"><span>Отзывы реальных заказчиков</span></h2>
+                            <h2 class="reviews__title title" data-swiper-parallax="-100"><span>Отзывы</span></h2>
                             <div class="reviews__content" data-swiper-parallax="-200">
                                 <div class="reviews__column reviews__column_w">
                                     <div class="reviews__words words swiper-container">
