--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="refresh" content="700;URL=index.html" />
+    <meta http-equiv="refresh" content="10;URL=index.html" />
     <link rel="icon" href="" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
     <title>Нужен сайт</title>
@@ -12,7 +12,7 @@
     <section class="success">
         <div class="success__container container">
             <div class="success__logo">
-                <a href="index.html"><img src="img/logo.png" alt=""></a>
+                <a href="index.html"><img src="img/logo.svg" alt=""></a>
             </div>
             <div class="success__row">
                 <div class="success__img"></div>
