--- a/privacy.html
+++ b/privacy.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Политика в отношении обработки персональных данных">
-    <link rel="icon" href="" type="image/svg+xml"> <!--! поменяй адрес -->
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="css/style.css">
     <title>Нужен сайт</title>
 </head>
 <body>
     <section class="privacy">
         <div class="privacy__container container">
-            <div class="privacy__logo"><a href="index.html"><img src="img/logo.png" alt=""></a></div>
+            <div class="privacy__logo"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
+            <div class="privacy__btn">
+                <a href="index.html" class="privacy__button"><span>Вернуться</span></a>
+            </div>
             <h1 class="privacy__title">Политика в отношении обработки персональных данных</h1>
             <div class="privacy__text">                
                 <h2 class="privacy__subtitle" class="privacy__subtitle">1. Общие положения</h2 class="privacy__subtitle" class="privacy__subtitle">
