--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <section class="advantages">
                     <div class="advantages__container container">
                         <div class="advantages__row">
-                            <h2 class="advantages__title title" data-swiper-parallax="-500"><span>Преимущества</span></h2>
-                            <div class="advantages__tabs" data-swiper-parallax="-1000">
+                            <h2 class="advantages__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Преимущества</span></h2>
+                            <div class="advantages__tabs" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
                                 <nav class="advantages__items">
                                     <div class="advantages__icon advantages__icon_monitor active"></div>
                                     <div class="advantages__icon advantages__icon_like"></div>
@@ -65,8 +65,8 @@
                 <section class="portfolio">
                     <div class="portfolio__container container">
                         <div class="portfolio__row">
-                            <h2 class="portfolio__title title" data-swiper-parallax="-100"><span>Примеры работ</span></h2>
-                            <div class="portfolio__slider swiper-container" data-swiper-parallax="-200">
+                            <h2 class="portfolio__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Примеры работ</span></h2>
+                            <div class="portfolio__slider swiper-container" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
                                 <div class="portfolio__wrap swiper-wrapper">
                                     <div class="portfolio__slide swiper-slide">
                                         <a href="https://vtorsheb.ru/" target="_blank" class="portfolio__screen"><img src="img/1.jpg" alt=""></a>
@@ -93,22 +93,22 @@
                 <section class="reviews">
                     <div class="reviews__container container">
                         <div class="reviews__row">
-                            <h2 class="reviews__title title" data-swiper-parallax="-100"><span>Отзывы</span></h2>
-                            <div class="reviews__content" data-swiper-parallax="-200">
+                            <h2 class="reviews__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Отзывы</span></h2>
+                            <div class="reviews__content" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
                                 <div class="reviews__column reviews__column_w">
                                     <div class="reviews__words words swiper-container">
                                         <div class="words__wrap swiper-wrapper">
                                             <div class="words__slide swiper-slide">
                                                 <p class="words__name">Никита</p>
-                                                <p class="words__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem alias assumenda consequatur aspernatur quo autem quis molestias? Nihil, odit rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, numquam quasi eligendi asperiores magni laudantium autem saepe enim aut perferendis, ad itaque sit deleniti adipisci!</p>
+                                                <p class="words__text">Заказывал сайт у ребят в августе 2020 года. Меня проконсультировали, все объяснили, приняли совместное решение создать лендинг для моего оконного сервиса. Товаров и услуг у меня немного, поэтому остановились на данном варианте. Сделали красиво и качественно, сайт отображается везде, нареканий не было. Сейчас стабильно приходят заявки, при том, что рекламу почти уже не запускаю. Оказалось, в сети искать клиентов очень удобно.</p>
                                             </div>
                                             <div class="words__slide swiper-slide">
                                                 <p class="words__name">Роман</p>
-                                                <p class="words__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate sint totam in quia assumenda tenetur, voluptates quidem vel obcaecati, corporis soluta inventore sapiente perferendis distinctio! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, vel.</p>
+                                                <p class="words__text">Нужен был сайт для того, чтобы поместить его название на свою визитку, работаю на себя в качестве «мужа на час». Рекламу в интернете запускать не собирался, потому что друг с визитками набрал целую базу клиентов. Пообщавшись с консультантом, решил заказать сайт-визитку. Мне очень понравилось соотношение цена/качество. Сайт небольшой, красивый, и недорогой. С ним мое дело выглядит как-то посолиднее.</p>
                                             </div>
                                             <div class="words__slide swiper-slide">
-                                                <p class="words__name">Вини</p>
-                                                <p class="words__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio voluptates impedit officia facere, dolorem repudiandae, maiores neque deleniti fugit inventore cupiditate culpa dolore sunt! Placeat iure nihil dolor temporibus quae.</p>
+                                                <p class="words__name">Антон</p>
+                                                <p class="words__text">Решил попробовать покорить интернет, потому что возможность делать больше товара была, а клиентов не хватало. Стал рассматривать варианты и нашел данную компанию. Хочу еще раз выразить огромную благодарность команде за создание такого шедевра. За такие деньги я и не мечтал купить сайт. Я очень доволен приобретением, теперь мой щебень разлетается как горячие пирожки.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -140,41 +140,41 @@
                 <section class="plan">
                     <div class="plan__container container">
                         <div class="plan__row">
-                            <h2 class="plan__title title" data-swiper-parallax="-100"><span>Схема работы</span></h2>
+                            <h2 class="plan__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Схема работы</span></h2>
                             <div class="plan__content">
-                                <div class="plan__point" data-swiper-parallax="-200">
+                                <div class="plan__point" data-swiper-parallax="-600" data-swiper-parallax-duration="1000">
                                     <p class="plan__number">1</p>
                                     <div class="plan__text akkordeon">
                                         <p class="plan__subtitle">Консультация</p>
-                                        <p class="plan__description plan__description_1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                        <p class="plan__description plan__description_1">Вы выбираете предпочтительный способ связи, мы дополнительно консультируем вас по всем вопросам. При согласии обеих сторон, обсуждаем различные детали, касающиеся сроков выполнения работы, стоимости сайта и прочих общих моментов.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-300">
+                                <div class="plan__point" data-swiper-parallax="-700" data-swiper-parallax-duration="1000">
                                     <p class="plan__number">2</p>
                                     <div class="plan__text">
-                                        <p class="plan__subtitle">Анализ бизнеса</p>
-                                        <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                        <p class="plan__subtitle">Подготовка к работе</p>
+                                        <p class="plan__description">Изучаем ваш бизнес, анализируем прямых конкурентов, составляем примерный план сайта, учитывая ваши пожелания. Согласуем с вами, какая информация будет написана о вашей фирме. На этом этапе вами вносится предоплата в размере 30% от общей стоимости.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-400">
+                                <div class="plan__point" data-swiper-parallax="-800" data-swiper-parallax-duration="1000">
                                     <p class="plan__number">3</p>
                                     <div class="plan__text">
                                         <p class="plan__subtitle">Создание макета</p>
-                                        <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                        <p class="plan__description">Рисуем схематический прототип сайта на основании проделанной подготовительной работы. Аналогично плану, согласуем с вами размещение тех или иных блоков на сайте. При достижении обоюдного согласия, как будет выглядеть ваш сайт, приступаем непосредственно к его созданию.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-500">
+                                <div class="plan__point" data-swiper-parallax="-900" data-swiper-parallax-duration="1000">
                                     <p class="plan__number">4</p>
                                     <div class="plan__text">
                                         <p class="plan__subtitle">Верстка сайта</p>
-                                        <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                        <p class="plan__description">Пишем код, наполняем сайт текстовой информацией, различным фото- и видеоконтентом. Адаптируем отображение сайта под различные устройства, включая мобильные. На протяжении всего процесса, постоянно тестируем функционал, чтобы не пропустить ни одну деталь.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-600">
+                                <div class="plan__point" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
                                     <p class="plan__number">5</p>
                                     <div class="plan__text">
-                                        <p class="plan__subtitle">Посадка сайта на хостинг</p>
-                                        <p class="plan__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed soluta doloremque expedita labore doloribus iure mollitia ipsam error culpa suscipit, aspernatur ut ipsum, voluptas quo repudiandae quod! Debitis, tempore magni?</p>
+                                        <p class="plan__subtitle">Загрузка на хостинг</p>
+                                        <p class="plan__description">Последним шагом будет регистрация доменного имени (например, site.ru) и покупка хостинга (сервера, на котором располагаются файлы сайта). Загружаем написанный сайт на купленный хостинг, проводим контрольное тестирование сайта, получаем от вас денежное вознаграждение и передаем сайт в руки хозяина.</p>
                                     </div>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
             </div>
             <!-- Цены -->
             <div class="wrapper__page swiper-slide">
-                <section class="price" data-swiper-parallax="-500">
+                <section class="price" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
                     <div class="price__container container">
                         <div class="price__row">
                             <div class="price__body">
@@ -268,8 +268,8 @@
                 <section class="contacts">
                     <div class="contacts__container container">
                         <div class="contacts__row">
-                            <h2 class="contacts__title title" data-swiper-parallax="-500"><span>Контакты</span></h2>
-                            <div class="contacts__content" data-swiper-parallax="-1000">
+                            <h2 class="contacts__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Контакты</span></h2>
+                            <div class="contacts__content" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
                                 <div class="contacts__column">
                                     <div class="contacts__body">
                                         <form action="mail.php" method="POST" class="contacts__form form-contacts">
