--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <section class="advantages">
                     <div class="advantages__container container">
                         <div class="advantages__row">
-                            <h2 class="advantages__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Преимущества</span></h2>
-                            <div class="advantages__tabs" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
+                            <h2 class="advantages__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Преимущества</span></h2>
+                            <div class="advantages__tabs" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
                                 <nav class="advantages__items">
                                     <div class="advantages__icon advantages__icon_monitor active"></div>
                                     <div class="advantages__icon advantages__icon_like"></div>
@@ -65,8 +65,8 @@
                 <section class="portfolio">
                     <div class="portfolio__container container">
                         <div class="portfolio__row">
-                            <h2 class="portfolio__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Примеры работ</span></h2>
-                            <div class="portfolio__slider swiper-container" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
+                            <h2 class="portfolio__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Примеры работ</span></h2>
+                            <div class="portfolio__slider swiper-container" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
                                 <div class="portfolio__wrap swiper-wrapper">
                                     <div class="portfolio__slide swiper-slide">
                                         <a href="https://vtorsheb.ru/" target="_blank" class="portfolio__screen"><img src="img/1.jpg" alt=""></a>
@@ -93,8 +93,8 @@
                 <section class="reviews">
                     <div class="reviews__container container">
                         <div class="reviews__row">
-                            <h2 class="reviews__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Отзывы</span></h2>
-                            <div class="reviews__content" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
+                            <h2 class="reviews__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Отзывы</span></h2>
+                            <div class="reviews__content" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
                                 <div class="reviews__column reviews__column_w">
                                     <div class="reviews__words words swiper-container">
                                         <div class="words__wrap swiper-wrapper">
@@ -140,37 +140,37 @@
                 <section class="plan">
                     <div class="plan__container container">
                         <div class="plan__row">
-                            <h2 class="plan__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Схема работы</span></h2>
-                            <div class="plan__content">
-                                <div class="plan__point" data-swiper-parallax="-600" data-swiper-parallax-duration="1000">
+                            <h2 class="plan__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Схема работы</span></h2>
+                            <div class="plan__content"  data-swiper-parallax="-250" data-swiper-parallax-duration="1000">
+                                <div class="plan__point">
                                     <p class="plan__number">1</p>
                                     <div class="plan__text akkordeon">
                                         <p class="plan__subtitle">Консультация</p>
                                         <p class="plan__description plan__description_1">Вы выбираете предпочтительный способ связи, мы дополнительно консультируем вас по всем вопросам. При согласии обеих сторон, обсуждаем различные детали, касающиеся сроков выполнения работы, стоимости сайта и прочих общих моментов.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-700" data-swiper-parallax-duration="1000">
+                                <div class="plan__point">
                                     <p class="plan__number">2</p>
                                     <div class="plan__text">
                                         <p class="plan__subtitle">Подготовка к работе</p>
                                         <p class="plan__description">Изучаем ваш бизнес, анализируем прямых конкурентов, составляем примерный план сайта, учитывая ваши пожелания. Согласуем с вами, какая информация будет написана о вашей фирме. На этом этапе вами вносится предоплата в размере 30% от общей стоимости.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-800" data-swiper-parallax-duration="1000">
+                                <div class="plan__point">
                                     <p class="plan__number">3</p>
                                     <div class="plan__text">
                                         <p class="plan__subtitle">Создание макета</p>
                                         <p class="plan__description">Рисуем схематический прототип сайта на основании проделанной подготовительной работы. Аналогично плану, согласуем с вами размещение тех или иных блоков на сайте. При достижении обоюдного согласия, как будет выглядеть ваш сайт, приступаем непосредственно к его созданию.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-900" data-swiper-parallax-duration="1000">
+                                <div class="plan__point">
                                     <p class="plan__number">4</p>
                                     <div class="plan__text">
                                         <p class="plan__subtitle">Верстка сайта</p>
                                         <p class="plan__description">Пишем код, наполняем сайт текстовой информацией, различным фото- и видеоконтентом. Адаптируем отображение сайта под различные устройства, включая мобильные. На протяжении всего процесса, постоянно тестируем функционал, чтобы не пропустить ни одну деталь.</p>
                                     </div>
                                 </div>
-                                <div class="plan__point" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
+                                <div class="plan__point">
                                     <p class="plan__number">5</p>
                                     <div class="plan__text">
                                         <p class="plan__subtitle">Загрузка на хостинг</p>
@@ -184,7 +184,7 @@
             </div>
             <!-- Цены -->
             <div class="wrapper__page swiper-slide">
-                <section class="price" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
+                <section class="price" data-swiper-parallax="-250" data-swiper-parallax-duration="1000">
                     <div class="price__container container">
                         <div class="price__row">
                             <div class="price__body">
@@ -268,8 +268,8 @@
                 <section class="contacts">
                     <div class="contacts__container container">
                         <div class="contacts__row">
-                            <h2 class="contacts__title title" data-swiper-parallax="-500" data-swiper-parallax-duration="1000"><span>Контакты</span></h2>
-                            <div class="contacts__content" data-swiper-parallax="-1000" data-swiper-parallax-duration="1000">
+                            <h2 class="contacts__title title" data-swiper-parallax="-250" data-swiper-parallax-duration="1000"><span>Контакты</span></h2>
+                            <div class="contacts__content" data-swiper-parallax="-500" data-swiper-parallax-duration="1000">
                                 <div class="contacts__column">
                                     <div class="contacts__body">
                                         <form action="mail.php" method="POST" class="contacts__form form-contacts">
